successfully GET requested data from weather API

--- a/style.css
+++ b/style.css
@@ -15,10 +15,14 @@
    * Optional: Makes the sample page fill the window. 
    */
   html,
+  *{
+    background-color: #004080;
+  }
   body {
     height: 100%;
     margin: 0;
     padding: 0;
+    color: white;
   }
   
   
