--- a/style.css
+++ b/style.css
@@ -7,22 +7,44 @@
  * Always set the map height explicitly to define the size of the div element
  * that contains the map. 
  */
- #map {
-    height: 100%;
-  }
-  
-  /* 
-   * Optional: Makes the sample page fill the window. 
-   */
-  html,
-  *{
-    background-color: #004080;
-  }
-  body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    color: white;
-  }
-  
-  
+* {
+  background-color: #004080;
+  color: white;
+}
+
+#map {
+  height: 100%;
+}
+
+#landingPage{
+  text-align: center;
+  font-size: 60px;
+}
+
+.addressInput{
+  text-align: center;
+}
+
+body {
+  height: 100%;
+  margin: auto;
+  padding: 0;
+  text-align: center;
+}
+
+#weatherBar {
+  margin: auto;
+  margin-top: 20px;
+  display: flex;
+  overflow: auto;
+  max-width: 1000px;
+  border-style: solid;
+  border-radius: 4px;
+
+}
+
+.weatherCard {
+  text-align: center;
+  color: white;
+  padding: 8px;
+}
