--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   text-align: center;
   margin-left: 1vw;
   margin-right: 1vw;
+  justify-content: center;
 }
 
 #landingPage {
@@ -27,7 +28,7 @@
   padding-right: 20px;
 }
 
-#webpageImage img{
+#webpageImage img {
   width: 800px;
 }
 
@@ -37,7 +38,7 @@
   color: #183F7C;
 }
 
-#address{
+#address {
   text-align: center;
   border-radius: 100px;
   height: 30px;
@@ -51,7 +52,7 @@
   align-items: first baseline; */
 }
 
-::placeholder{
+::placeholder {
   color: #183F7C;
 }
 
@@ -62,37 +63,44 @@
 
 }
 
-#weatherBar {
-  margin: auto;
-  margin-top: 20px;
-  display: flex;
-  overflow: auto;
-  max-width: 1000px;
-  border-style: solid;
-  border-radius: 4px;
-
+#weather{
+  justify-content: center;
+  width: 60%;
+  margin: 0 auto;
 }
 
-#weatherBarHome {
-  margin: auto;
-  margin-top: 20px;
+#weatherBar {
+  margin: 0 auto;
+  margin-top: 4px;
   display: flex;
   overflow: auto;
-  max-width: 1000px;
-  border-style: solid;
-  border-radius: 4px;
+  width: 100%;
+}
 
+.weatherCard {
+  color: white;
+  border: 2px solid #FFFFFF;
+  border-radius: 11px;
+  margin-right: 12px;
+  font-size: 20px;
+}
+
+.weatherCard p{
+  margin: 4px;
+}
+
+#weatherTitle{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 30px;
 }
 
 .resultContents {
   display: flex;
 }
 
-.weatherCard {
-  text-align: center;
-  color: white;
-  padding: 8px;
-}
+
 
 .homeInfo {
   justify-content: center;
@@ -115,7 +123,7 @@
 
 #map_canvas1 {
   border-radius: 8px;
-  margin:auto;
+  margin: auto;
 
 }
 
