--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   margin-left: 1vw;
   margin-right: 1vw;
   justify-content: center;
-  width:inherit;
+  width: inherit;
 }
 
 #landingPage {
@@ -28,22 +28,22 @@
   font-size: 45px;
   padding-left: 20px;
   padding-right: 20px;
-  width:inherit;
+  width: inherit;
 }
 
 #webpageTitle {
-  font-size:8vh;
+  font-size: 8vh;
 }
 
 #webpageImage {
-  max-height:inherit;
-  max-width:inherit;
+  max-height: inherit;
+  max-width: inherit;
 }
 
 
 .addressInput {
   /* margin-top: .3vh; */
-  margin-bottom:3vh;
+  margin-bottom: 3vh;
   color: #183F7C;
 }
 
@@ -110,7 +110,7 @@
 }
 
 .homeInfo {
-  padding-top:5vh;
+  padding-top: 5vh;
   justify-content: center;
   /* display: flex; */
 }
@@ -122,9 +122,9 @@
 }
 
 #diggingImage {
-  width:60%;
+  width: 60%;
   height: 60%;
-  padding-right:5vw;
+  padding-right: 5vw;
 }
 
 .otherSideOfTheWorld {
@@ -134,9 +134,11 @@
   /* margin-right: 10px; */
 
 }
-.turtlePic{
-  height:200px
+
+.turtlePic {
+  height: 200px
 }
+
 #map_canvas1 {
   border-radius: 8px;
   margin: auto;
@@ -179,111 +181,124 @@ ul {
 }
 
 .switch {
-	position: relative;
-	display: block;
-	width: 60px;
-	height: 30px;
-	padding: 3px;
-	margin: 0 10px 10px 0;
-	background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
-	background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 25px);
-	border-radius: 18px;
-	box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
-	cursor: pointer;
-	box-sizing:content-box;
-}
-.switch-input {
-	position: absolute;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	box-sizing:content-box;
-}
-.switch-label {
-	position: relative;
-	display: block;
-	height: inherit;
-	font-size: 12px;
-  font-weight: bold;
-	text-transform: uppercase;
-	background: red;
-	border-radius: inherit;
-	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
-	box-sizing:content-box;
-}
-.switch-label:before, .switch-label:after {
-	position: absolute;
-	top: 50%;
-	margin-top: -.5em;
-	line-height: 1;
-	-webkit-transition: inherit;
-	-moz-transition: inherit;
-	-o-transition: inherit;
-	transition: inherit;
-	box-sizing:content-box;
-}
-.switch-label:before {
-	content: attr(data-off);
-	right: 12px;
-	color: white;
-	text-shadow: 0 1px rgba(255, 255, 255, 0.5);
-}
-.switch-label:after {
-	content: attr(data-on);
-	left: 12px;
-	color: #FFFFFF;
-	text-shadow: 0 1px rgba(0, 0, 0, 0.2);
-	opacity: 0;
-}
-.switch-input:checked ~ .switch-label {
-	background: #183F7C;
-	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
-}
-.switch-input:checked ~ .switch-label:before {
-	opacity: 1;
-}
-.switch-input:checked ~ .switch-label:after {
-	opacity: 1;
-}
-.switch-handle {
-	position: absolute;
-	top: 4px;
-	left: 4px;
-	width: 28px;
-	height: 28px;
-	background: linear-gradient(to bottom, #FFFFFF 40%, #f0f0f0);
-	background-image: -webkit-linear-gradient(top, #FFFFFF 40%, #f0f0f0);
-	border-radius: 100%;
-	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
-}
-.switch-handle:before {
-	content: "";
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin: -6px 0 0 -6px;
-	width: 12px;
-	height: 12px;
-	background: linear-gradient(to bottom, red, #FFFFFF);
-	background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF);
-	border-radius: 6px;
-	box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
-}
-.switch-input:checked ~ .switch-handle {
-	left: 34.5px;
-	box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
-}
- 
-/* Transition
-========================== */
-.switch-label, .switch-handle {
-	transition: All 0.3s ease;
-	-webkit-transition: All 0.3s ease;
-	-moz-transition: All 0.3s ease;
-	-o-transition: All 0.3s ease;
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 30px;
+  padding: 3px;
+  margin: 0 10px 10px 0;
+  background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
+  background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 25px);
+  border-radius: 18px;
+  box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  box-sizing: content-box;
 }
 
-#factsTitle{
+.switch-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  box-sizing: content-box;
+}
+
+.switch-label {
+  position: relative;
+  display: block;
+  height: inherit;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+  background: red;
+  border-radius: inherit;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
+  box-sizing: content-box;
+}
+
+.switch-label:before,
+.switch-label:after {
+  position: absolute;
+  top: 50%;
+  margin-top: -.5em;
+  line-height: 1;
+  -webkit-transition: inherit;
+  -moz-transition: inherit;
+  -o-transition: inherit;
+  transition: inherit;
+  box-sizing: content-box;
+}
+
+.switch-label:before {
+  content: attr(data-off);
+  right: 12px;
+  color: white;
+  text-shadow: 0 1px rgba(255, 255, 255, 0.5);
+}
+
+.switch-label:after {
+  content: attr(data-on);
+  left: 12px;
+  color: #FFFFFF;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+}
+
+.switch-input:checked~.switch-label {
+  background: #183F7C;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
+}
+
+.switch-input:checked~.switch-label:before {
+  opacity: 1;
+}
+
+.switch-input:checked~.switch-label:after {
+  opacity: 1;
+}
+
+.switch-handle {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 28px;
+  height: 28px;
+  background: linear-gradient(to bottom, #FFFFFF 40%, #f0f0f0);
+  background-image: -webkit-linear-gradient(top, #FFFFFF 40%, #f0f0f0);
+  border-radius: 100%;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+.switch-handle:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -6px 0 0 -6px;
+  width: 12px;
+  height: 12px;
+  background: linear-gradient(to bottom, red, #FFFFFF);
+  background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF);
+  border-radius: 6px;
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
+}
+
+.switch-input:checked~.switch-handle {
+  left: 34.5px;
+  box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Transition
+========================== */
+.switch-label,
+.switch-handle {
+  transition: All 0.3s ease;
+  -webkit-transition: All 0.3s ease;
+  -moz-transition: All 0.3s ease;
+  -o-transition: All 0.3s ease;
+}
+
+#factsTitle {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -296,12 +311,13 @@ ul {
   margin: 0 auto;
 }
 
-#cards{
+#cards {
   display: flex;
   justify-content: space-between;
+  margin: auto;
 }
 
-.cardContainer{
+.cardContainer {
   /* border: solid; */
   background-color: white;
   width: 200px;
@@ -309,7 +325,7 @@ ul {
   margin-bottom: 10px;
 }
 
-.cardTitle{
+.cardTitle {
   font-size: 12px;
   text-align: left;
   padding-left: 10px;
@@ -318,7 +334,7 @@ ul {
 
 
 
-#populationFact{
+#populationFact {
   font-size: 24px;
   color: #004080;
   font-weight: bold;
@@ -326,7 +342,7 @@ ul {
   margin-bottom: 10px;
 }
 
-#gdpFact{
+#gdpFact {
   font-size: 24px;
   color: #004080;
   font-weight: bold;
@@ -334,7 +350,7 @@ ul {
   margin-bottom: 10px;
 }
 
-#currencyFact{
+#currencyFact {
   font-size: 24px;
   color: #004080;
   font-weight: bold;
@@ -342,7 +358,7 @@ ul {
   margin-bottom: 10px;
 }
 
-#internetUsersFact{
+#internetUsersFact {
   font-size: 24px;
   color: #004080;
   font-weight: bold;
@@ -350,37 +366,37 @@ ul {
   margin-bottom: 10px;
 }
 
-.cardIcon{
+.cardIcon {
   text-align: right;
   padding-right: 10px;
   color: #636368;
   margin-bottom: 10px;
 }
 
-#fishSection{
+#fishSection {
   justify-content: center;
   width: 60%;
   margin: 0 auto;
   display: none;
 }
 
-#fishTitle{
-  font-size: 50px;
+#fishTitle {
+  font-size: 30px;
 }
 
-#fishInformation{
+#fishInformation {
   display: flex;
   align-items: center;
 }
 
-#fishText{
+#fishText {
   text-align: left;
   padding-right: 20px;
 }
 
-#fishText h3{
+#fishText h3 {
   font-size: 50px;
-  
+
 }
 
 #fishText #fishOverview {
@@ -389,19 +405,19 @@ ul {
 }
 
 
-#fishImg img{
+#fishImg img {
   border-radius: 20px;
   width: 500px;
   height: auto;
 }
 
-#donate{
+#donate {
   justify-content: center;
   width: 100%;
   margin: 0 auto;
 }
 
-#donate button{
+#donate button {
   display: block;
   width: 100%;
   border: none;
@@ -417,12 +433,12 @@ ul {
   margin-top: 20px;
 }
 
-#donate button:hover{
+#donate button:hover {
   background-color: #60D29F;
   color: #004080;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -442,12 +458,12 @@ a{
   margin: 30px auto;
 }
 
-#digAgainButton:hover{
+#digAgainButton:hover {
   background-color: #60D29F;
   color: #004080;
 }
 
-#submitButton{
+#submitButton {
   display: none;
   margin: auto;
   margin-top: 10px;
@@ -455,4 +471,40 @@ a{
   border-radius: 100px;
   background-color: white;
   color: #004080;
+}
+
+@media(max-width:1370px) {
+  #cards{
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #fishInformation {
+    display: block;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #fishText{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+}
+
+@media(max-width:900px){
+  .mainPage{
+    margin-left: 2vw;
+    margin-right: 2vw;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+}
+
+#otherCountry{
+  font-size: 50px;
 }
