--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@
 }
 
 .otherSideOfTheWorld {
-  height: 500px;
+  height: 60%;
   width: 100%;
   margin-left: 10px;
   /* margin-right: 10px; */
@@ -152,6 +152,7 @@
 
 #map_canvas2 {
   border-radius: 8px;
+  height:70%;
   margin: auto;
 }
 
